# face_matching

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/core/: config.py
app/model/: __init__.py  user_face_model.py
app/repository/: user_face_repository.py
app/service/: classifier_service.py  embedding_service.py  face_processing_service.py  face_verification_service.py  matching_service.py  notification_service.py  reference_store.py  storage_service.py
app/subscriber/: pubsub_subscriber.py  signin_subscriber.py  signup_subscriber.py
data/: classifier.pkl
docs/: FCM_NOTIFICATION.md
